RISDEV-7261 Fix overflowing case law

--- a/frontend/src/assets/caselaw.css
+++ b/frontend/src/assets/caselaw.css
@@ -59,7 +59,7 @@
   }
 
   p {
-    @apply mb-16;
+    @apply mb-16 overflow-x-auto;
     unicode-bidi: isolate;
   }
 }
